--- a/src/MusicCommunityApp/Views/Forum/Index.cshtml
+++ b/src/MusicCommunityApp/Views/Forum/Index.cshtml
@@ -1,4 +1,16 @@
+@model List<MusicCommunityApp.Models.Message>
+    
 @{
-    ViewBag.Title = "Forum Home";
+    ViewBag.Title = "All Messages";
 }
-<h1>Forum Home Page</h1>
+
+<h1>Hello World</h1>
+<!--<h1>List of My Messages</h1>
+        @foreach (var m in Model)
+        {
+            @: Subject: @m.Subject <br>
+            @: Body: @m.Body <br><br>
+            @: Date: @m.Date <br><br>
+            @: From: @m.From.FirstName @m.From.LastName <br><br>
+            @: Event: @m.Event <br> <br>
+        }-->
