--- a/src/MusicCommunityApp/Views/Home/Index.cshtml
+++ b/src/MusicCommunityApp/Views/Home/Index.cshtml
@@ -4,3 +4,6 @@
 }
 <h2>Today's date is: @ViewBag.Date</h2>
 <p>This is the Index Page</p>
+<h1>Message Information</h1>
+@Html.ActionLink("Show all messages", "Index", "Forum")<br />
+@Html.ActionLink("Show all members", "Members", "Home")
