--- a/src/MusicCommunityApp/Views/Forum/MyMessages.cshtml
+++ b/src/MusicCommunityApp/Views/Forum/MyMessages.cshtml
@@ -9,6 +9,6 @@
             @: Subject: @m.Subject <br>
             @: Body: @m.Body <br><br>
             @: Date: @m.Date <br><br>
-            @: From: @m.From.FirstName @m.From.LastName <br><br>
+            @: From: @m.From<br><br>
             @: Event: @m.Event <br> <br>
         }
