fixed showing who the message was from

--- a/src/MusicCommunityApp/Views/Forum/Index.cshtml
+++ b/src/MusicCommunityApp/Views/Forum/Index.cshtml
@@ -1,11 +1,9 @@
 @model List<MusicCommunityApp.Models.Message>
-    
 @{
     ViewBag.Title = "All Messages";
 }
 
-<h1>Hello World</h1>
-<!--<h1>List of My Messages</h1>
+<h1>List of Messages</h1>
         @foreach (var m in Model)
         {
             @: Subject: @m.Subject <br>
@@ -13,4 +11,4 @@
             @: Date: @m.Date <br><br>
             @: From: @m.From.FirstName @m.From.LastName <br><br>
             @: Event: @m.Event <br> <br>
-        }-->
+        }
