--- a/src/MusicCommunityApp/Views/Forum/AllMessages.cshtml
+++ b/src/MusicCommunityApp/Views/Forum/AllMessages.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<MusicCommunityApp.Models.Message>
+@model List<MusicCommunityApp.Models.Message>
 @{
     ViewBag.Title = "All Messages";
 }
@@ -9,6 +9,6 @@
             @: Subject: @m.Subject <br>
             @: Body: @m.Body <br><br>
             @: Date: @m.Date <br><br>
-            @: From: @m.From.MemberID <br><br>
+            @: From: @m.From.FirstName @m.From.LastName<br><br>
             @: Event: @m.Event <br> <br>
         }
