--- a/src/MusicCommunityApp/Views/Shared/_BaseLayout.cshtml
+++ b/src/MusicCommunityApp/Views/Shared/_BaseLayout.cshtml
@@ -2,9 +2,16 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" asp-href-include="lib/bootstrap/dist/css/*.min.css" />
     <title>@ViewBag.Title </title>
 </head>
 <body>
+    <ul class="nav nav-tabs">
+        <li role="presentation" class="@(ViewContext.RouteData.Values["Action"].ToString() == "Index" ? "active" : "")">@Html.ActionLink("Home", "Index", "Home")</li>
+        <li role="presentation" class="@(ViewContext.RouteData.Values["Action"].ToString() == "About" ? "active" : "")">@Html.ActionLink("About", "About", "Home")</li>
+        <li role="presentation" class="@(ViewContext.RouteData.Values["Action"].ToString() == "History" ? "active" : "")">@Html.ActionLink("History", "History", "Home")</li>
+        <li role="presentation" class="@(ViewContext.RouteData.Values["Action"].ToString() == "AllMessages" ? "active" : "")">@Html.ActionLink("Forum", "AllMessages", "Forum")</li>
+    </ul>
     <div>
         @RenderBody()
     </div>
