Changed the title of a couple views

--- a/src/MusicCommunityApp/Views/Forum/AllMessages.cshtml
+++ b/src/MusicCommunityApp/Views/Forum/AllMessages.cshtml
@@ -1,6 +1,6 @@
 @model List<MusicCommunityApp.Models.Message>
 @{
-    ViewBag.Title = "All Messages";
+    ViewBag.Title = "Forum";
 }
 
 <h1>List of Messages</h1>
