--- a/src/MusicCommunityApp/Views/Home/Index.cshtml
+++ b/src/MusicCommunityApp/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Home";
 }
 <h2>Today's date is: @ViewBag.Date</h2>
 <p>This is the Index Page</p>
