adds form to create a new message

--- a/src/MusicCommunityApp/Views/Forum/AllMessages.cshtml
+++ b/src/MusicCommunityApp/Views/Forum/AllMessages.cshtml
@@ -3,12 +3,30 @@
     ViewBag.Title = "Forum";
 }
 
-<h1>List of Messages</h1>
-        @foreach (var m in Model)
-        {
-            @: Subject: @m.Subject <br>
-            @: Body: @m.Body <br><br>
-            @: Date: @m.Date <br><br>
-            @: From: @m.From.FirstName @m.From.LastName<br><br>
-            @: Event: @m.Event <br> <br>
-        }
+<div class="container">
+    <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+            <a href="@Url.Action("NewMessageForm", "Forum")" class="btn btn-success center-block" style="margin-top:30px;">
+                Add a Message
+            </a>
+
+            @foreach (var m in Model)
+            {
+
+                <div class="messages center-block">
+                    <h4 class="pull-left">Subject: <b>@m.Subject</b></h4>
+                    <h4 class="pull-right">Event: <b>@m.EventName</b></h4><br />
+                    <hr class="noMargin">
+                    <p class="created_post">@m.Body </p>
+
+                    <p class="postInfo pull-right">
+                        @m.From.FirstName @m.From.LastName <i>@m.Date.ToString("d")</i>
+                    </p>
+                </div>
+
+            }
+        </div>
+    </div>
+</div>
+
+
