--- a/src/MusicCommunityApp/Views/Shared/_BaseLayout.cshtml
+++ b/src/MusicCommunityApp/Views/Shared/_BaseLayout.cshtml
@@ -26,6 +26,17 @@
             margin-top: 20px;
             border: solid #d7ccc8 .5px;
         }
+        .comments {
+            width: 100%;
+            height: 100px;
+            background-color: #e3f2fd;
+            position: relative;
+            float: left;
+            border: solid #d7ccc8 .5px;
+            padding: 10px;
+            margin-bottom: 10px;
+            
+        }
 
 
         #postBtn {
