--- a/src/MusicCommunityApp/Views/Shared/_BaseLayout.cshtml
+++ b/src/MusicCommunityApp/Views/Shared/_BaseLayout.cshtml
@@ -57,6 +57,14 @@
             margin: 20px;
             width: 30%;
         }
+
+        #new_message_form {
+            width:40%;
+        }
+        #comment_form {
+            width: 40%;
+        }
+
     </style>
 </head>
 <body>
