--- a/src/MusicCommunityApp/Views/Forum/CommentForm.cshtml
+++ b/src/MusicCommunityApp/Views/Forum/CommentForm.cshtml
@@ -4,11 +4,13 @@
 @{
     ViewBag.Title = "Comment";
 }
+
+<h1 class="text-center">Leave a Comment:</h1>
 <form asp-controller="Forum" asp-action="CommentForm" method="post">
-    <input asp-for="MessageID" type="hidden" />
+    <div class="form-group center-block" id="comment_form">
+        <input asp-for="MessageID" type="hidden" />
+        <textarea asp-for="Comment.Body" class="form-control"></textarea><br />
 
-    <label asp-for="Comment.Body"></label>
-    <input asp-for="Comment.Body" />
-
-    <button type="submit">Post</button>
+        <button type="submit" class="btn btn-primary pull-right">Post</button>
+    </div>
 </form>
