--- a/src/MusicCommunityApp/Views/Forum/Index.cshtml
+++ b/src/MusicCommunityApp/Views/Forum/Index.cshtml
@@ -10,5 +10,5 @@
             @: Body: @m.Body <br><br>
             @: Date: @m.Date <br><br>
             @: From: @m.From.FirstName @m.From.LastName <br><br>
-            @: Event: @m.Event <br> <br>
+            @: Event: @m.EventName <br> <br>
         }
