--- a/src/MusicCommunityApp/Views/Home/Index.cshtml
+++ b/src/MusicCommunityApp/Views/Home/Index.cshtml
@@ -1,13 +1,23 @@
-
+@model MusicCommunityApp.Models.MusicianViewModel
 @{
     ViewBag.Title = "Home";
 }
-<h2>Today's date is: @ViewBag.Date</h2>
-<p>This is the Index Page</p>
-<h1>Message Information</h1>
-@Html.ActionLink("Show all messages", "AllMessages", "Forum")<br />
-@Html.ActionLink("Show all members", "Members", "Home") <br>
-@Html.ActionLink("Show Bob's' Messages", "MessagesByName", "Forum", new { FName = "Bob", LName = "Loblaw" } )<br>
-@Html.ActionLink("Show Johnny's' Messages", "MessagesByName", "Forum", new { FName = "Johnny", LName = "Rocket" } )<br>
-@Html.ActionLink("Show Greetings Messages", "MessagesBySubject", "Forum", new { subject = "Greetings" } )<br>
-@Html.ActionLink("Show Introduction Messages", "MessagesBySubject", "Forum", new { subject = "Introduction" } )<br>
+
+@if (Model.Authenticated)
+{
+    <h3>Welcome @Model.FirstName<span> </span> @Model.LastName<span>!</span></h3>
+    <h5>Today's date is: @ViewBag.Date</h5>
+    <p>This is the Index Page</p>
+    <h1>Message Information</h1>
+    @Html.ActionLink("Show all messages", "AllMessages", "Forum")<br />
+    @Html.ActionLink("Show all members", "Members", "Home") <br>
+    @Html.ActionLink("Show Bob's' Messages", "MessagesByName", "Forum", new { FName = "Bob", LName = "Loblaw" })<br>
+    @Html.ActionLink("Show Johnny's' Messages", "MessagesByName", "Forum", new { FName = "Johnny", LName = "Rocket" })<br>
+    @Html.ActionLink("Show Greetings Messages", "MessagesBySubject", "Forum", new { subject = "Greetings" })<br>
+    @Html.ActionLink("Show Introduction Messages", "MessagesBySubject", "Forum", new { subject = "Introduction" })<br>
+}
+else
+{
+    <a asp-controller="Account" asp-action="Register">Register</a><br />
+    <a asp-controller="Account" asp-action="Login">Login</a>
+}
